<resources>
    <string name="app_name">Wordino</string>
    <string name="How_to_play">How to play</string>
    <string name="Login">Login</string>
    <string name="Play">Play as Guest</string>
    <string name="game_short_description">Guess the 5-letter word.</string>
    <string name="OR">OR</string>
    <string name="n_attempts">Number of attempts today</string>
    <string name="Forgot_psw">Forgot password?</string>
    <string name="logo">Logo Application</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password" translatable="false">Password</string>
    <string name="google_login">Login with Google</string>
    <string name="new_account">New to Wordino?</string>
    <string name="register">Register</string>
    <string name="error_message">Data are not correct</string>
    <string name="Unlimited">Play Unlimited</string>
    <string name="Back">Back</string>
    <string name="Rules">Rules</string>
    <string name="hwp">HWP</string>
    <string name="settings">Settings</string>
    <string name="stat">Stat</string>
    <string name="image">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="social">Social</string>
    <string name="daily">Daily</string>
    <string name="training">Training</string>
    <string name="b">B</string>
    <string name="e">E</string>
    <string name="a">A</string>
    <string name="c">C</string>
    <string name="h">H</string>
    <string name="q">Q</string>
    <string name="w">W</string>
    <string name="r">R</string>
    <string name="t">T</string>
    <string name="y">Y</string>
    <string name="u">U</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="z">Z</string>
    <string name="x">X</string>
    <string name="v">V</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="canc">Canc</string>
    <string name="enter">Enter</string>
    <string name="score">Score :</string>
    <string name="Statistics">Statistics</string>
    <!-- Strings related to languages -->
    <string-array name="language_array">
        <item>English</item>
        <item>Italian</item>
        <item>Spanish</item>
        <item>German</item>
        <item>French</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="verification_code">Insert verification code</string>
    <string name="default_web_client_id">Default web client ID</string>
    <string name="error_login_password_message">Login password error</string>
    <string name="error_login_user_message">Login user error</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="error_email">The entered email is incorrect</string>
    <string name="error_password">The entered password is incorrect</string>
    <string name="error_user_collision_message">User already exists</string>
    <string name="check_login_data_message">Email or password incorrect</string>
    <string name="error_no_google_account_found_message">Google account not found</string>
    <string name="Games_Played">Games Played</string>
    <string name="Current_Streak">Current Streak</string>
    <string name="Max_Streak">Max Streak</string>
    <string name="Winrate">Winrate</string>
    <string name="GUESS_DISTRIBUTION">Guess Distribution</string>
</resources>