<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userStatistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gamePlayedText"
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/winrateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:numeric="integer"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentStreakText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/maxStreakText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="48sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gamesPlayedText"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Games_Played" />

        <TextView
            android:id="@+id/winrateTextView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Winrate" />

        <TextView
            android:id="@+id/currentStreakTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Current_Streak" />

        <TextView
            android:id="@+id/maxStreakTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Max_Streak" />

    </LinearLayout>

    <TextView
        android:id="@+id/guessDistributionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:gravity="bottom"
        android:text="@string/GUESS_DISTRIBUTION"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.github.mikephil.charting.charts.HorizontalBarChart
        android:id="@+id/horizontalBarChart"
        android:layout_width="match_parent"
        android:layout_height="400dp" />
</LinearLayout>